# augmented-reality

augmented_reality/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  coordinate_system  coordinate_system (copy)  coordinate_system.cpp  data  functions.h
augmented_reality/cali/: calibrator.h  data  functions.h
openGL/: CMakeLists.txt  SceneGraph.h  SceneNode.h  main  main.cpp
openGL/cali/: anillos.cpp  calibrator.h  functions.h
